Fix gap between vocab sections

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -508,7 +508,7 @@ ul li:before{
 }
 
 .vocabulary-section-two{
-  margin-top: 30px;
+  margin-top: -50px;
 }
 
 #style-line-two{
